--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
-MONGO_URI='mongodb+srv://safilbadarudeen:safilbadarudeen@nodeexpressprojects.rtd0u62.mongodb.net/cognitiveLeap?retryWrites=true&w=majority'
+MONGO_URI="mongodb+srv://safilbadarudeen:safilbadarudeen@nodeexpressprojects.rtd0u62.mongodb.net/cognitiveLeap?retryWrites=true&w=majority"
+
+ADMIN=[ 8589850481 , 8086181208 ];
