backend - added create english alphabet and update alphabet , get all alphabet route and controllers

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI="mongodb+srv://safilbadarudeen:safilbadarudeen@nodeexpressprojects.rtd0u62.mongodb.net/cognitiveLeap?retryWrites=true&w=majority"
 
-ADMIN=[ 8589850481 , 8086181208 ];
+ADMIN=[ 8589850481 , 8086181208 ]
+JWT_SECRET="jwt-secret"
